finish projects accordion, need to fix alignment

--- a/src/components/projects/projects-accordion/index.css
+++ b/src/components/projects/projects-accordion/index.css
@@ -6,9 +6,17 @@
 .my-project-accordion {
     --_button-size: 3rem;
     --_panel-padding: 0.75rem;
+    --_panel-gap: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+@media (min-width: 45em) {
+    .my-project-accordion {
+        flex-direction: row;
+        height: 30rem;
+    }
 }
 
 .my-project-panel {
@@ -17,7 +25,14 @@
     flex-basis: calc((var(--_panel-padding) * 2) + var(--_button-size));
     overflow: hidden;
     padding: var(--_panel-padding);
+    padding-right: calc((var(--_panel-padding) * 5));
     border-radius: calc(((var(--_panel-padding) * 2) + var(--_button-size)) / 2);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .my-project-panel {
+        transition: flex-basis 500ms;
+    }
 }
 
 .my-project-panel:has([aria-expanded = "true"]) {
@@ -27,6 +42,41 @@
 .my-project-content > p {
     transform: translateY(2rem);
     opacity: 0;
+    margin-left: calc(var(--_button-size) + var(--_panel-gap));
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .my-project-content > p {
+        transition: transform 500ms 250ms, opacity 500ms 250ms;
+    }
+}
+
+.my-project-panel:has([aria-expanded = "true"]) p {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.my-project-accordion-title {
+    color: #E7DFDD;
+    font-size: 1.5rem;
+    font-weight: 700;
+    position: relative;
+    isolation: isolate;
+    display: grid;
+    align-items: center;
+}
+
+@media (max-width: 44.999em) {
+    .my-project-accordion-title::after {
+        content: "";
+        position: absolute;
+        left: calc((var(--_panel-gap) + var(--_button-size)) * -1);
+        width: calc(100% + (var(--_button-size) * 2));
+        height: var(--_button-size);
+        background: hsl(0 0% 0% / 0.5);
+        z-index: -1;
+        border-radius: 100vw;
+    }
 }
 
 .my-project-accordion-image {
@@ -36,12 +86,17 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
+    transition: filter 500ms;
+}
+
+.my-project-panel:has([aria-expanded = "true"]) .my-project-accordion-image {
+    filter: brightness(0.4);
 }
 
 .my-project-accordion-trigger {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: var(--_panel-gap);
     flex-direction: row-reverse;
     background: transparent;
     border: 0;
@@ -49,9 +104,11 @@
 }
 
 .my-project-accordion-icon {
+    fill: var(--primary-color);
     background: hsl(0 0% 0% / 0.55);
     width: var(--_button-size);
     aspect-ratio: 1 / 1;
     padding: 0.5rem;
     border-radius: 50%;
+    z-index: 10;
 }
